--- a/pages/index.html
+++ b/pages/index.html
@@ -26,6 +26,9 @@
                 <h1>Hello, world!</h1>
             </div>
         </div>
+        <main>
+            <!-- Your main content will go here! -->
+        </main>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
